# BlogIt-API

./: .gitignore  README.md  pyproject.toml  requirements.txt
blog/: admin.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_uuidtaggeditem_alter_post_tags.py  0003_alter_post_slug.py  0004_comment.py  0005_alter_comment_post.py  0006_alter_post_slug.py
blog/tests/: test_comments.py  test_post.py
core/: settings.py  urls.py
user/: admin.py
user/migrations/: 0001_initial.py
